Initial commit - move over from calmmage/seasonal

--- a/example.env
+++ b/example.env
@@ -1,3 +1,11 @@
+TARGET_CHANNEL_ID=-100{channel_id}
+# period - for testing
+# cron - for prod
+SCHEDULING_MODE=period
+SCHEDULING_PERIOD_SECONDS=60
+
+DEBUG=false
+
 # Required: Bot token from @BotFather
 TELEGRAM_BOT_TOKEN=your_bot_token_here
 
@@ -5,13 +13,6 @@ TELEGRAM_BOT_TOKEN=your_bot_token_here
 #CALMMAGE_SERVICE_REGISTRY_URL=http://localhost:8765
 # prod:
 #CALMMAGE_SERVICE_REGISTRY_URL=https://service-registry.calmmage.com
-
-BOTSPOT_LLM_PROVIDER_ENABLED=true
-#OPENAI_API_KEY=
-#ANTHROPIC_API_KEY=
-#GEMINI_API_KEY=
-#XAI_API_KEY=
-#DEEPSEEK_API_KEY=
 
 # ----------------------------------------
 # Botspot Components
@@ -27,8 +28,8 @@ BOTSPOT_SCHEDULER_ENABLED=true
 
 # MongoDB
 BOTSPOT_MONGO_DATABASE_ENABLED=true
-#BOTSPOT_MONGO_DATABASE_CONN_STR=mongodb://localhost:27017
-#BOTSPOT_MONGO_DATABASE_DATABASE=dev-project-name
+BOTSPOT_MONGO_DATABASE_CONN_STR=mongodb://localhost:27017
+BOTSPOT_MONGO_DATABASE_DATABASE=botspot-poster-bot-dev
 
 # Telethon Manager
 #BOTSPOT_TELETHON_MANAGER_ENABLED=true
@@ -81,7 +82,7 @@ BOTSPOT_SEND_SAFE_ENABLED=true
 #BOTSPOT_CHAT_FETCHER_DEFAULT_DIALOGS_LIMIT=null
 
 # LLM Provider
-#BOTSPOT_LLM_PROVIDER_ENABLED=false
+BOTSPOT_LLM_PROVIDER_ENABLED=true
 #BOTSPOT_LLM_PROVIDER_DEFAULT_MODEL=claude-3.7
 #BOTSPOT_LLM_PROVIDER_DEFAULT_TEMPERATURE=0.7
 #BOTSPOT_LLM_PROVIDER_DEFAULT_MAX_TOKENS=1000
@@ -89,12 +90,10 @@ BOTSPOT_SEND_SAFE_ENABLED=true
 #BOTSPOT_LLM_PROVIDER_ALLOW_EVERYONE=false
 #BOTSPOT_LLM_PROVIDER_SKIP_IMPORT_CHECK=false
 
-# API Keys for LLM providers
 #OPENAI_API_KEY=your_openai_key_here
 #ANTHROPIC_API_KEY=your_anthropic_key_here
 #XAI_API_KEY=your_grok_key_here
 #GEMINI_API_KEY=your_gemini_key_here
-#GOOGLE_API_KEY=your_google_api_key_here
 
 #MISTRAL_API_KEY=your_mistral_key_here
 #PERPLEXITY_API_KEY=your_perplexity_key_here
@@ -103,7 +102,7 @@ BOTSPOT_SEND_SAFE_ENABLED=true
 
 
 # Queue Manager
-#BOTSPOT_QUEUE_MANAGER_ENABLED=false
+BOTSPOT_QUEUE_MANAGER_ENABLED=true
 #BOTSPOT_QUEUE_MANAGER_COLLECTION_NAME_PREFIX=botspot_queue_
 
 # Auto Archive
