--- a/example.env
+++ b/example.env
@@ -3,6 +3,7 @@ TARGET_CHANNEL_ID=-100{channel_id}
 # cron - for prod
 SCHEDULING_MODE=period
 SCHEDULING_PERIOD_SECONDS=60
+#SCHEDULING_CRON_EXPR="0 10 * * 1" # every Monday at 10:00 UTC
 
 DEBUG=false
 
