--- a/example.env
+++ b/example.env
@@ -1,9 +1,12 @@
 TARGET_CHANNEL_ID=-100{channel_id}
 # period - for testing
 # cron - for prod
-SCHEDULING_MODE=period
-SCHEDULING_PERIOD_SECONDS=60
+# SCHEDULING_MODE=period
+SCHEDULING_MODE=cron
+#SCHEDULING_PERIOD_SECONDS=60
 #SCHEDULING_CRON_EXPR="0 10 * * 1" # every Monday at 10:00 UTC
+# every 10 seconds
+SCHEDULING_CRON_EXPR="*/10 * * * * *"
 
 DEBUG=false
 
